Translations by delightedbydhamma to translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json

--- a/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
@@ -45,5 +45,6 @@
   "pli-tv-bi-pm:27.2": "and then after some time, whether she is questioned or not, it is clear that the legal issue is unrelated and was used as pretext, and she admits to her ill will, she commits an offense entailing suspension. ",
   "pli-tv-bi-pm:28.1": "If a nun says in anger, ",
   "pli-tv-bi-pm:28.2": "I renounce the Buddha, I renounce the Teaching, I renounce the Sangha, I renounce the training! The Sakyan daughters are not the only monastics. There are other monastics who have a sense of conscience, who are afraid of wrongdoing and fond of the training. I’ll practice the spiritual life with them,’ ",
-  "pli-tv-bi-pm:28.3": "then the nuns should correct her like this: "
+  "pli-tv-bi-pm:28.3": "then the nuns should correct her like this: ",
+  "pli-tv-bi-pm:28.4": "‘Venerable, don’t say such things in anger, I renounce the Buddha, I renounce the Teaching, I renounce the Sangha, I renounce the training! The Sakyan daughters are not the only monastics. There are other monastics who have a sense of conscience, who are afraid of wrongdoing and fond of the training. I’ll practice the spiritual life with them.’ Take delight, Venerable; the Teaching is well proclaimed. Practice the spiritual life for the complete ending of suffering.’ "
 }
