--- a/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
@@ -46,5 +46,6 @@
   "pli-tv-bi-pm:28.1": "If a nun says in anger, ",
   "pli-tv-bi-pm:28.2": "I renounce the Buddha, I renounce the Teaching, I renounce the Sangha, I renounce the training! The Sakyan daughters are not the only monastics. There are other monastics who have a sense of conscience, who are afraid of wrongdoing and fond of the training. I’ll practice the spiritual life with them,’ ",
   "pli-tv-bi-pm:28.3": "then the nuns should correct her like this: ",
-  "pli-tv-bi-pm:28.4": "‘Venerable, don’t say such things in anger, I renounce the Buddha, I renounce the Teaching, I renounce the Sangha, I renounce the training! The Sakyan daughters are not the only monastics. There are other monastics who have a sense of conscience, who are afraid of wrongdoing and fond of the training. I’ll practice the spiritual life with them.’ Take delight, Venerable; the Teaching is well proclaimed. Practice the spiritual life for the complete ending of suffering.’ "
+  "pli-tv-bi-pm:28.4": "‘Venerable, don’t say such things in anger, I renounce the Buddha, I renounce the Teaching, I renounce the Sangha, I renounce the training! The Sakyan daughters are not the only monastics. There are other monastics who have a sense of conscience, who are afraid of wrongdoing and fond of the training. I’ll practice the spiritual life with them.’ Take delight, Venerable; the Teaching is well proclaimed. Practice the spiritual life for the complete ending of suffering.’ ",
+  "pli-tv-bi-pm:28.5": "If that nun continues as before, the nuns should press her up to three times to make her stop. "
 }
