--- a/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
@@ -49,5 +49,6 @@
   "pli-tv-bi-pm:28.4": "‘Venerable, don’t say such things in anger, I renounce the Buddha, I renounce the Teaching, I renounce the Sangha, I renounce the training! The Sakyan daughters are not the only monastics. There are other monastics who have a sense of conscience, who are afraid of wrongdoing and fond of the training. I’ll practice the spiritual life with them.’ Take delight, Venerable; the Teaching is well proclaimed. Practice the spiritual life for the complete ending of suffering.’ ",
   "pli-tv-bi-pm:28.5": "If that nun continues as before, the nuns should press her up to three times to make her stop. ",
   "pli-tv-bi-pm:28.6": "If she then stops, all is well.",
-  "pli-tv-bi-pm:28.7": "If she does not stop, then after the third announcement that nun too has committed an offense entailing sending away and suspension. "
+  "pli-tv-bi-pm:28.7": "If she does not stop, then after the third announcement that nun too has committed an offense entailing sending away and suspension. ",
+  "pli-tv-bi-pm:29.1": "If a nun is angry because a legal issue has been decided against her, saying, "
 }
