--- a/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
@@ -51,5 +51,6 @@
   "pli-tv-bi-pm:28.6": "If she then stops, all is well.",
   "pli-tv-bi-pm:28.7": "If she does not stop, then after the third announcement that nun too has committed an offense entailing sending away and suspension. ",
   "pli-tv-bi-pm:29.1": "If a nun is angry because a legal issue has been decided against her, saying, ",
-  "pli-tv-bi-pm:29.2": "‘The nuns are acting out of favoritism, ill will, confusion, and fear,’  then the nuns should correct her like this: "
+  "pli-tv-bi-pm:29.2": "‘The nuns are acting out of favoritism, ill will, confusion, and fear,’  then the nuns should correct her like this: ",
+  "pli-tv-bi-pm:29.3": "‘Venerable, just because you’re angry that a legal issue has been decided against you, don’t say, ‘The nuns are acting out of favoritism, ill will, confusion, and fear.’ "
 }
