--- a/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
@@ -53,5 +53,6 @@
   "pli-tv-bi-pm:29.1": "If a nun is angry because a legal issue has been decided against her, saying, ",
   "pli-tv-bi-pm:29.2": "‘The nuns are acting out of favoritism, ill will, confusion, and fear,’  then the nuns should correct her like this: ",
   "pli-tv-bi-pm:29.3": "‘Venerable, just because you’re angry that a legal issue has been decided against you, don’t say, ‘The nuns are acting out of favoritism, ill will, confusion, and fear.’ Perhaps it’s you who are acting out of favoritism, ill will, confusion, and fear.’",
-  "pli-tv-bi-pm:29.4": "If that nun continues as before, the nuns should press her up to three times to make her stop. "
+  "pli-tv-bi-pm:29.4": "If that nun continues as before, the nuns should press her up to three times to make her stop. ",
+  "pli-tv-bi-pm:29.5": "If she then stops, all is well."
 }
