--- a/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
@@ -55,6 +55,7 @@
   "pli-tv-bi-pm:29.3": "‘Venerable, just because you’re angry that a legal issue has been decided against you, don’t say, ‘The nuns are acting out of favoritism, ill will, confusion, and fear.’ Perhaps it’s you who are acting out of favoritism, ill will, confusion, and fear.’",
   "pli-tv-bi-pm:29.4": "If that nun continues as before, the nuns should press her up to three times to make her stop. ",
   "pli-tv-bi-pm:29.5": "If she then stops, all is well.",
+  "pli-tv-bi-pm:29.6": "If she does not stop, then after the third announcement that nun too has committed an offense entailing sending away and suspension. ",
   "pli-tv-bi-pm:30.1": "If nuns socialize, behave badly, have a bad reputation, are notorious, harass the Sangha of nuns, and hide each other’s offenses, ",
   "pli-tv-bi-pm:30.2": "then the nuns should correct them like this: "
 }
