--- a/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
@@ -58,5 +58,5 @@
   "pli-tv-bi-pm:29.6": "If she does not stop, then after the third announcement that nun too has committed an offense entailing sending away and suspension. ",
   "pli-tv-bi-pm:30.1": "If nuns socialize, behave badly, have a bad reputation, are notorious, harass the Sangha of nuns, and hide each other’s offenses, ",
   "pli-tv-bi-pm:30.2": "then the nuns should correct them like this: ",
-  "pli-tv-bi-pm:30.3": "‘Sisters, you socialize, behave badly, have a bad reputation, are notorious, harass the Sangha of nuns, and hide each other’s offenses. Be secluded, Venerables. The Sangha praises seclusion for the Sisters.’"
+  "pli-tv-bi-pm:30.3": "‘Sisters, you socialize, behave badly, have a bad reputation, are notorious, harass the Sangha of nuns, and hide each other’s offenses. "
 }
