--- a/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
@@ -59,5 +59,6 @@
   "pli-tv-bi-pm:30.1": "If nuns socialize, behave badly, have a bad reputation, are notorious, harass the Sangha of nuns, and hide each other’s offenses, ",
   "pli-tv-bi-pm:30.2": "then the nuns should correct them like this: ",
   "pli-tv-bi-pm:30.3": "‘Sisters, you socialize, behave badly, have a bad reputation, are notorious, harass the Sangha of nuns, and hide each other’s offenses. ",
-  "pli-tv-bi-pm:30.4": "Be secluded, Venerables. The Sangha praises seclusion for the Sisters.’"
+  "pli-tv-bi-pm:30.4": "Be secluded, Venerables. The Sangha praises seclusion for the Sisters.’",
+  "pli-tv-bi-pm:30.5": "If those nuns continues as before, the nuns should press them up to three times to make them stop. "
 }
