--- a/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
@@ -62,5 +62,6 @@
   "pli-tv-bi-pm:30.4": "Be secluded, Venerables. The Sangha praises seclusion for the Sisters.’",
   "pli-tv-bi-pm:30.5": "If those nuns continues as before, the nuns should press them up to three times to make them stop. ",
   "pli-tv-bi-pm:30.6": "If they then stops, all is well.",
-  "pli-tv-bi-pm:30.7": "If they do not stop, then after the third announcement those nuns too have committed an offense entailing sending away and suspension. "
+  "pli-tv-bi-pm:30.7": "If they do not stop, then after the third announcement those nuns too have committed an offense entailing sending away and suspension. ",
+  "pli-tv-bi-pm:31.0": "Siding With One Socializing"
 }
