--- a/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
@@ -65,5 +65,6 @@
   "pli-tv-bi-pm:30.7": "If they do not stop, then after the third announcement those nuns too have committed an offense entailing sending away and suspension. ",
   "pli-tv-bi-pm:31.0": "Suspension 13. Siding With One Socializing",
   "pli-tv-bi-pm:31.1": "If a nun says,",
-  "pli-tv-bi-pm:31.2": "‘Venerables, you should socialize. Don’t live separately."
+  "pli-tv-bi-pm:31.2": "‘Venerables, you should socialize. Don’t live separately.",
+  "pli-tv-bi-pm:31.3": "There are other nuns in the Sangha who have such behavior, reputation, and notoriety, and who harass the Sangha of nuns and hide each other’s offenses."
 }
