Translations by delightedbydhamma to translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json

--- a/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
@@ -66,5 +66,5 @@
   "pli-tv-bi-pm:31.0": "Suspension 13. Siding With One Socializing",
   "pli-tv-bi-pm:31.1": "If a nun says,",
   "pli-tv-bi-pm:31.2": "‘Venerables, you should socialize. Don’t live separately.",
-  "pli-tv-bi-pm:31.3": "There are other nuns in the Sangha who have such behavior, reputation, and notoriety, and who harass the Sangha of nuns and hide each other’s offenses."
+  "pli-tv-bi-pm:31.3": "There are other nuns in the Sangha who have such behavior, reputation, and notoriety, and who harass the Sangha of nuns and hide each other’s offenses. The Sangha says nothing to them."
 }
