Translations by delightedbydhamma to translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json

--- a/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
@@ -68,5 +68,6 @@
   "pli-tv-bi-pm:31.2": "‘Venerables, you should socialize. Don’t live separately.",
   "pli-tv-bi-pm:31.3": "There are other nuns in the Sangha who have such behavior, reputation, and notoriety, and who harass the Sangha of nuns and hide each other’s offenses. The Sangha says nothing to them.",
   "pli-tv-bi-pm:31.4": " It’s because of disrespect, contempt, impatience, and slander, and because you are weak that the Sangha says to you, ‘Sisters, you socialize, behave badly, have a bad reputation, are notorious, harass the Sangha of nuns, and hide each other’s offenses. Be secluded, Venerables. The Sangha praises seclusion for the Sisters, ",
-  "pli-tv-bi-pm:31.5": "then the nuns should correct her like this: "
+  "pli-tv-bi-pm:31.5": "then the nuns should correct her like this: ",
+  "pli-tv-bi-pm:31.6": "‘Venerable, don’t say such things:"
 }
