Translations by delightedbydhamma to translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json

--- a/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
@@ -74,5 +74,6 @@
   "pli-tv-bi-pm:31.8": "There are other nuns in the Sangha who have such behavior, reputation, and notoriety, and who harass the Sangha of nuns and hide each other’s offenses. The Sangha says nothing to them.",
   "pli-tv-bi-pm:31.9": " It’s because of disrespect, contempt, impatience, and slander, and because you are weak that the Sangha says to you, ‘Sisters, you socialize, behave badly, have a bad reputation, are notorious, harass the Sangha of nuns, and hide each other’s offenses. Be secluded, Venerables. The Sangha praises seclusion for the Sisters, ",
   "pli-tv-bi-pm:31.10": "If that nun continues as before, the nuns should press her up to three times to make her stop. ",
-  "pli-tv-bi-pm:31.11": "If she then stops, all is well."
+  "pli-tv-bi-pm:31.11": "If she then stops, all is well.",
+  "pli-tv-bi-pm:31.12": "If she does not stop, then after the third announcement that nun too has committed an offense entailing sending away and suspension. "
 }
