--- a/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
@@ -78,5 +78,6 @@
   "pli-tv-bi-pm:31.12": "If she does not stop, then after the third announcement that nun too has committed an offense entailing sending away and suspension. ",
   "pli-tv-bi-pm:32.4": "If that nun continues as before, the nuns should press her up to three times to make her stop. ",
   "pli-tv-bi-pm:32.5": "If she then stops, all is well.",
-  "pli-tv-bi-pm:32.6": "If she does not stop, then after the third announcement that nun too has committed an offense entailing sending away and suspension. "
+  "pli-tv-bi-pm:32.6": "If she does not stop, then after the third announcement that nun too has committed an offense entailing sending away and suspension. ",
+  "pli-tv-bi-pm:33.5": "then the nuns should correct them like this: "
 }
