--- a/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
@@ -80,5 +80,6 @@
   "pli-tv-bi-pm:32.5": "If she then stops, all is well.",
   "pli-tv-bi-pm:32.6": "If she does not stop, then after the third announcement that nun too has committed an offense entailing sending away and suspension. ",
   "pli-tv-bi-pm:33.5": "then the nuns should correct them like this: ",
-  "pli-tv-bi-pm:33.10": "If those nuns continues as before, the nuns should press them up to three times to make them stop. "
+  "pli-tv-bi-pm:33.10": "If those nuns continues as before, the nuns should press them up to three times to make them stop. ",
+  "pli-tv-bi-pm:33.11": "If they then stops, all is well."
 }
