--- a/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
@@ -84,5 +84,6 @@
   "pli-tv-bi-pm:33.11": "If they then stops, all is well.",
   "pli-tv-bi-pm:33.12": "If they do not stop, then after the third announcement those nuns too have committed an offense entailing sending away and suspension. ",
   "pli-tv-bi-pm:34.4": "then the nuns should correct her like this: ",
-  "pli-tv-bi-pm:34.8": "If that nun continues as before, the nuns should press her up to three times to make her stop. "
+  "pli-tv-bi-pm:34.8": "If that nun continues as before, the nuns should press her up to three times to make her stop. ",
+  "pli-tv-bi-pm:34.9": "If she then stops, all is well."
 }
