--- a/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
@@ -87,5 +87,6 @@
   "pli-tv-bi-pm:34.8": "If that nun continues as before, the nuns should press her up to three times to make her stop. ",
   "pli-tv-bi-pm:34.9": "If she then stops, all is well.",
   "pli-tv-bi-pm:34.10": "If she does not stop, then after the third announcement that nun too has committed an offense entailing sending away and suspension. ",
-  "pli-tv-bi-pm:35.2": "then the nuns should correct her like this: "
+  "pli-tv-bi-pm:35.2": "then the nuns should correct her like this: ",
+  "pli-tv-bi-pm:35.6": "then the nuns should correct her like this: "
 }
