--- a/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
@@ -77,6 +77,7 @@
   "pli-tv-bi-pm:31.11": "If she then stops, all is well.",
   "pli-tv-bi-pm:31.12": "If she does not stop, then after the third announcement that nun too has committed an offense entailing sending away and suspension. ",
   "pli-tv-bi-pm:32.0": "Suspension 14. Causing Schism in the Saṅgha",
+  "pli-tv-bi-pm:32.1": "If a nun pursues schism in a united Sangha or persists in taking up a legal issue conducive to schism, the nuns should correct her like this, ",
   "pli-tv-bi-pm:32.4": "If that nun continues as before, the nuns should press her up to three times to make her stop. ",
   "pli-tv-bi-pm:32.5": "If she then stops, all is well.",
   "pli-tv-bi-pm:32.6": "If she does not stop, then after the third announcement that nun too has committed an offense entailing sending away and suspension. ",
