--- a/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
@@ -86,6 +86,7 @@
   "pli-tv-bi-pm:33.1": "That nun may have one, two, or three nuns who side with her and support her, and they may say, ",
   "pli-tv-bi-pm:33.2": "“Venerables, don’t correct this nun. ",
   "pli-tv-bi-pm:33.3": "She speaks in accordance with the Teaching and the training. ",
+  "pli-tv-bi-pm:33.4": "And she speaks with our consent and approval. She knows about us and speaks for us, and we approve of this.” ",
   "pli-tv-bi-pm:33.5": "then the nuns should correct them like this: ",
   "pli-tv-bi-pm:33.10": "If those nuns continues as before, the nuns should press them up to three times to make them stop. ",
   "pli-tv-bi-pm:33.11": "If they then stops, all is well.",
