--- a/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
@@ -88,6 +88,7 @@
   "pli-tv-bi-pm:33.3": "She speaks in accordance with the Teaching and the training. ",
   "pli-tv-bi-pm:33.4": "And she speaks with our consent and approval. She knows about us and speaks for us, and we approve of this.” ",
   "pli-tv-bi-pm:33.5": "then the nuns should correct them like this: ",
+  "pli-tv-bi-pm:33.6": "“No, Venerables, ",
   "pli-tv-bi-pm:33.10": "If those nuns continues as before, the nuns should press them up to three times to make them stop. ",
   "pli-tv-bi-pm:33.11": "If they then stops, all is well.",
   "pli-tv-bi-pm:33.12": "If they do not stop, then after the third announcement those nuns too have committed an offense entailing sending away and suspension. ",
