Translations by delightedbydhamma to translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json

--- a/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
@@ -90,6 +90,7 @@
   "pli-tv-bi-pm:33.5": "then the nuns should correct those nuns like this: ",
   "pli-tv-bi-pm:33.6": "“No, Venerables, ",
   "pli-tv-bi-pm:33.7": "this nun speaks contrary to the Teaching and the training. ",
+  "pli-tv-bi-pm:33.8": "And don’t consent to schism in the Sangha. ",
   "pli-tv-bi-pm:33.10": "If those nuns continues as before, the nuns should press them up to three times to make them stop. ",
   "pli-tv-bi-pm:33.11": "If they then stops, all is well.",
   "pli-tv-bi-pm:33.12": "If they do not stop, then after the third announcement those nuns too have committed an offense entailing sending away and suspension. ",
