--- a/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
@@ -88,7 +88,7 @@
   "pli-tv-bi-pm:33.3": "She speaks in accordance with the Teaching and the training. ",
   "pli-tv-bi-pm:33.4": "And she speaks with our consent and approval. She knows about us and speaks for us, and we approve of this.” ",
   "pli-tv-bi-pm:33.5": "then the nuns should correct those nuns like this: ",
-  "pli-tv-bi-pm:33.6": "“No, Venerables, ",
+  "pli-tv-bi-pm:33.6": "'No, Venerables, ",
   "pli-tv-bi-pm:33.7": "this nun speaks contrary to the Teaching and the training. ",
   "pli-tv-bi-pm:33.8": "And don’t consent to schism in the Sangha. ",
   "pli-tv-bi-pm:33.9": "Stay with the Sangha, for a united Sangha—in concord, in harmony, having a joint recitation—is at ease.” ",
