--- a/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
@@ -99,6 +99,7 @@
   "pli-tv-bi-pm:34.2": "“Venerables, don’t say anything to me, either good or bad, and I won’t say anything to you, either good or bad. ",
   "pli-tv-bi-pm:34.3": "Please refrain from correcting me,” ",
   "pli-tv-bi-pm:34.4": "then the nuns should correct her like this: ",
+  "pli-tv-bi-pm:34.5": "“Be easy to correct, Venerable, not incorrigible. ",
   "pli-tv-bi-pm:34.8": "If that nun continues as before, the nuns should press her up to three times to make her stop. ",
   "pli-tv-bi-pm:34.9": "If she then stops, all is well.",
   "pli-tv-bi-pm:34.10": "If she does not stop, then after the third announcement that nun too has committed an offense entailing sending away and suspension. ",
