Translations by delightedbydhamma to translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json

--- a/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
@@ -99,7 +99,7 @@
   "pli-tv-bi-pm:34.2": "“Venerables, don’t say anything to me, either good or bad, and I won’t say anything to you, either good or bad. ",
   "pli-tv-bi-pm:34.3": "Please refrain from correcting me,” ",
   "pli-tv-bi-pm:34.4": "then the nuns should correct her like this: ",
-  "pli-tv-bi-pm:34.5": "“Be easy to correct, Venerable, not incorrigible. ",
+  "pli-tv-bi-pm:34.5": "'Be easy to correct, Venerable, not incorrigible. ",
   "pli-tv-bi-pm:34.6": "And please give legitimate correction to the nuns, and the nuns will do the same to you. ",
   "pli-tv-bi-pm:34.7": "For it’s in this way that the Buddha’s community has grown, that is, through mutual correction and mutual clearing of offenses.” ",
   "pli-tv-bi-pm:34.8": "If that nun continues as before, the nuns should press her up to three times to make her stop. ",
