--- a/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
@@ -108,5 +108,6 @@
   "pli-tv-bi-pm:35.1": "If a nun who lives supported by a village or town is a corrupter of families and badly behaved, and his bad behavior has been seen and heard about, and the families corrupted by her have been seen and heard about, ",
   "pli-tv-bi-pm:35.2": "then the nuns should correct her like this: ",
   "pli-tv-bi-pm:35.3": "'Venerable, you’re a corrupter of families and badly behaved. Your bad behavior has been seen and heard about, and the families corrupted by you have been seen and heard about. Leave this monastery; you’ve stayed here long enough.'",
+  "pli-tv-bi-pm:35.4": "If she replies",
   "pli-tv-bi-pm:35.6": "then the nuns should correct her like this: "
 }
