Translations by delightedbydhamma to translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json

--- a/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
@@ -110,5 +110,6 @@
   "pli-tv-bi-pm:35.3": "'Venerable, you’re a corrupter of families and badly behaved. Your bad behavior has been seen and heard about, and the families corrupted by you have been seen and heard about. Leave this monastery; you’ve stayed here long enough.'",
   "pli-tv-bi-pm:35.4": "If she replies,",
   "pli-tv-bi-pm:35.5": "'You’re acting out of desire, ill will, confusion, and fear. Because of this sort of offense, you only banish some, but not others,'",
-  "pli-tv-bi-pm:35.6": "then the nuns should correct her like this: "
+  "pli-tv-bi-pm:35.6": "then the nuns should correct her like this: ",
+  "pli-tv-bi-pm:35.7": "'No, Venerable, the monks are not acting out of desire, ill will, confusion, and fear."
 }
