Translations by delightedbydhamma to translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json

--- a/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
@@ -111,5 +111,5 @@
   "pli-tv-bi-pm:35.4": "If she replies,",
   "pli-tv-bi-pm:35.5": "'You’re acting out of desire, ill will, confusion, and fear. Because of this sort of offense, you only banish some, but not others,'",
   "pli-tv-bi-pm:35.6": "then the nuns should correct her like this: ",
-  "pli-tv-bi-pm:35.7": "'No, Venerable, the monks are not acting out of desire, ill will, confusion, and fear."
+  "pli-tv-bi-pm:35.7": "'No, Venerable, the nuns are not acting out of desire, ill will, confusion, and fear."
 }
