--- a/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
@@ -114,5 +114,6 @@
   "pli-tv-bi-pm:35.7": "'No, Venerable, the nuns are not acting out of desire, ill will, confusion, and fear.",
   "pli-tv-bi-pm:35.8": "Venerable, you’re a corrupter of families and badly behaved. Your bad behavior has been seen and heard about, and the families corrupted by you have been seen and heard about. Leave this monastery; you’ve stayed here long enough.'",
   "pli-tv-bi-pm:35.9": "If that nun continues as before, the nuns should press her up to three times to make her stop. ",
-  "pli-tv-bi-pm:35.10": "If she then stops, all is well."
+  "pli-tv-bi-pm:35.10": "If she then stops, all is well.",
+  "pli-tv-bi-pm:35.11": "If she does not stop, then after the third announcement that nun too has committed an offense entailing sending away and suspension. "
 }
