--- a/translation/de/sabbamitta/sutta/dn/dn16_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn16_translation-de-sabbamitta.json
@@ -451,10 +451,9 @@
   "dn16:2.24.2": "Da klang die Krankheit des Buddha ab. ",
   "dn16:2.24.3": "Bald nach seiner Genesung von dieser Krankheit ging der Buddha aus seiner Hütte und setzte sich in den Schatten des Vordaches auf den ausgebreiteten Sitz. ",
   "dn16:2.24.4": "Da ging der Ehrwürdige Ānanda zum Buddha, verbeugte sich, setzte sich zur Seite hin und sagte zu ihm: ",
-  "dn16:2.24.5": "„Herr, wie gut, dass der Buddha ohne Beschwerden ist, dass es ihm leidlich geht. Denn als der Buddha krank war, fühlte sich mein Körper an wie betäubt. ",
-  "dn16:2.24.6": "Ich wusste nicht, wo hinten und vorne war, ",
-  "dn16:2.24.7": "und die Lehren wollten mir nicht einfallen. Immerhin tröstete ich mich mit dem Gedanken, ",
-  "dn16:2.24.8": "dass der Buddha nicht vollkommen erlöschen würde, ohne eine Erklärung über den Saṅgha der Mönche und Nonnen abzugeben.“ ",
+  "dn16:2.24.5": "„Herr, wie gut, dass der Buddha ohne Beschwerden ist, dass es ihm leidlich geht. Denn als der Buddha krank war, fühlte sich mein Körper an wie betäubt, Ich wusste nicht, wo hinten und vorne war, ",
+  "dn16:2.24.6": "und die Lehren wollten mir nicht einfallen. Immerhin tröstete ich mich mit dem Gedanken, ",
+  "dn16:2.24.7": "dass der Buddha nicht vollkommen erlöschen würde, ohne eine Erklärung über den Saṅgha der Mönche und Nonnen abzugeben.“ ",
   "dn16:2.25.1": "„Aber was könnte der Saṅgha von mir erwarten, Ānanda? ",
   "dn16:2.25.2": "Ich habe den Dhamma gelehrt, ohne zwischen geheimen und öffentlichen Lehren zu unterscheiden. ",
   "dn16:2.25.3": "Der Klargewordene hat nicht die geschlossene Faust eines Lehrers, wenn es um die Lehren geht. ",
