--- a/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
@@ -116,5 +116,6 @@
   "pli-tv-bi-pm:35.9": "If that nun continues as before, the nuns should press her up to three times to make her stop. ",
   "pli-tv-bi-pm:35.10": "If she then stops, all is well.",
   "pli-tv-bi-pm:35.11": "If she does not stop, then after the third announcement that nun too has committed an offense entailing sending away and suspension. ",
-  "pli-tv-bi-pm:36.1": "“Venerables, the seventeen rules on suspension have been recited, nine being immediate offenses, eight after the third announcement. "
+  "pli-tv-bi-pm:36.1": "“Venerables, the seventeen rules on suspension have been recited, nine being immediate offenses, eight after the third announcement. ",
+  "pli-tv-bi-pm:36.2": "If a nun commits any one of them, she is to undergo probation for half a month before both communities."
 }
