--- a/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
@@ -120,5 +120,6 @@
   "pli-tv-bi-pm:36.2": "If a nun commits any one of them, she is to must undertake a trial period for a half-month toward both Sanghas. ",
   "pli-tv-bi-pm:36.3": "When this is completed, she is to be rehabilitated wherever there is a sangha of at least twenty nuns. ",
   "pli-tv-bi-pm:36.4": "If that nun is rehabilitated by a sangha of nuns of even one less than twenty, ",
-  "pli-tv-bi-pm:36.5": "In regard to this I ask you, ‘Are you pure in this?’ "
+  "pli-tv-bi-pm:36.5": "In regard to this I ask you, ‘Are you pure in this?’ ",
+  "pli-tv-bi-pm:36.6": "A second time I ask, ‘Are you pure in this?’ "
 }
