Translations by delightedbydhamma to translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json

--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -37,5 +37,6 @@
   "pli-tv-bu-pm:21.3": "If a monk builds a large dwelling on a site where harm will be done and which lacks space on all sides, or he does not have monks approve the site, he commits an offense entailing suspension. ",
   "pli-tv-bu-pm:22.1": "If a monk who is angry and displeased groundlessly charges a monk with an offense entailing expulsion, aiming to make him leave the monastic life, ",
   "pli-tv-bu-pm:22.2": "and then after some time, whether he is questioned or not, it is clear that the legal issue is groundless, and he admits to his ill will, he commits an offense entailing suspension. \n",
-  "pli-tv-bu-pm:23.1": "If a monk who is angry and displeased, uses an unrelated legal issue as a pretext to charge a monk with an offense entailing expulsion, aiming to make him leave the monastic life,'"
+  "pli-tv-bu-pm:23.1": "If a monk who is angry and displeased, uses an unrelated legal issue as a pretext to charge a monk with an offense entailing expulsion, aiming to make him leave the monastic life,'",
+  "pli-tv-bu-pm:23.2": "and then after some time, whether he is questioned or not, it is clear that the legal issue is unrelated and was used as a pretext, and he admits to his ill will, he commits an offense entailing suspension. "
 }
