--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -39,5 +39,6 @@
   "pli-tv-bu-pm:22.2": "and then after some time, whether he is questioned or not, it is clear that the legal issue is groundless, and he admits to his ill will, he commits an offense entailing suspension. \n",
   "pli-tv-bu-pm:23.1": "If a monk who is angry and displeased, uses an unrelated legal issue as a pretext to charge a monk with an offense entailing expulsion, aiming to make him leave the monastic life,'",
   "pli-tv-bu-pm:23.2": "and then after some time, whether he is questioned or not, it is clear that the legal issue is unrelated and was used as a pretext, and he admits to his ill will, he commits an offense entailing suspension. ",
-  "pli-tv-bu-pm:24.1": "If a monk pursues schism in a united Sangha or persists in taking up a legal issue conducive to schism, the monks should correct him like this, "
+  "pli-tv-bu-pm:24.1": "If a monk pursues schism in a united Sangha or persists in taking up a legal issue conducive to schism, the monks should correct him like this, ",
+  "pli-tv-bu-pm:24.2": "‘Venerable, don’t pursue schism in the united Sangha or persist in taking up a legal issue conducive to schism. "
 }
