--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -41,5 +41,6 @@
   "pli-tv-bu-pm:23.2": "and then after some time, whether he is questioned or not, it is clear that the legal issue is unrelated and was used as a pretext, and he admits to his ill will, he commits an offense entailing suspension. ",
   "pli-tv-bu-pm:24.1": "If a monk pursues schism in a united Sangha or persists in taking up a legal issue conducive to schism, the monks should correct him like this, ",
   "pli-tv-bu-pm:24.2": "‘Venerable, don’t pursue schism in the united Sangha or persist in taking up a legal issue conducive to schism. ",
-  "pli-tv-bu-pm:24.3": "Stay with the Sangha, for a united Sangha—in concord, in harmony, having a joint recitation—is at ease.’ "
+  "pli-tv-bu-pm:24.3": "Stay with the Sangha, for a united Sangha—in concord, in harmony, having a joint recitation—is at ease.’ ",
+  "pli-tv-bu-pm:24.4": "If that monk continues as before, the monks should press him up to three times to make him stop. "
 }
