--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -42,5 +42,6 @@
   "pli-tv-bu-pm:24.1": "If a monk pursues schism in a united Sangha or persists in taking up a legal issue conducive to schism, the monks should correct him like this, ",
   "pli-tv-bu-pm:24.2": "‘Venerable, don’t pursue schism in the united Sangha or persist in taking up a legal issue conducive to schism. ",
   "pli-tv-bu-pm:24.3": "Stay with the Sangha, for a united Sangha—in concord, in harmony, having a joint recitation—is at ease.’ ",
-  "pli-tv-bu-pm:24.4": "If that monk continues as before, the monks should press him up to three times to make him stop. "
+  "pli-tv-bu-pm:24.4": "If that monk continues as before, the monks should press him up to three times to make him stop. ",
+  "pli-tv-bu-pm:24.5": "If he then stops, all is well."
 }
