Translations by delightedbydhamma to translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json

--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -43,5 +43,6 @@
   "pli-tv-bu-pm:24.2": "‘Venerable, don’t pursue schism in the united Sangha or persist in taking up a legal issue conducive to schism. ",
   "pli-tv-bu-pm:24.3": "Stay with the Sangha, for a united Sangha—in concord, in harmony, having a joint recitation—is at ease.’ ",
   "pli-tv-bu-pm:24.4": "If that monk continues as before, the monks should press him up to three times to make him stop. ",
-  "pli-tv-bu-pm:24.5": "If he then stops, all is well."
+  "pli-tv-bu-pm:24.5": "If he then stops, all is well.",
+  "pli-tv-bu-pm:24.6": "he commits an offense entailing suspension. "
 }
