--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -44,5 +44,6 @@
   "pli-tv-bu-pm:24.3": "Stay with the Sangha, for a united Sangha—in concord, in harmony, having a joint recitation—is at ease.’ ",
   "pli-tv-bu-pm:24.4": "If that monk continues as before, the monks should press him up to three times to make him stop. ",
   "pli-tv-bu-pm:24.5": "If he then stops, all is well.",
-  "pli-tv-bu-pm:24.6": "he commits an offense entailing suspension. "
+  "pli-tv-bu-pm:24.6": "he commits an offense entailing suspension. ",
+  "pli-tv-bu-pm:25.1": "That monk may have one, two, or three monks who side with him and support him, and they may say, "
 }
