Translations by delightedbydhamma to translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json

--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -48,5 +48,6 @@
   "pli-tv-bu-pm:25.1": "That monk may have one, two, or three monks who side with him and support him, and they may say, ",
   "pli-tv-bu-pm:25.2": "“Venerables, don’t correct this monk. ",
   "pli-tv-bu-pm:25.3": "He speaks in accordance with the Teaching and the training. ",
-  "pli-tv-bu-pm:25.4": "And he speaks with our consent and approval. He knows about us and speaks for us, and we approve of this.” "
+  "pli-tv-bu-pm:25.4": "And he speaks with our consent and approval. He knows about us and speaks for us, and we approve of this.” ",
+  "pli-tv-bu-pm:25.5": "The monks should correct those monks like this:"
 }
