Translations by delightedbydhamma to translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json

--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -52,5 +52,6 @@
   "pli-tv-bu-pm:25.5": "The monks should correct those monks like this:",
   "pli-tv-bu-pm:25.6": "'No, Venerables, ",
   "pli-tv-bu-pm:25.7": "this monk speaks contrary to the Teaching and the training. ",
-  "pli-tv-bu-pm:25.8": "And don’t consent to schism in the Sangha. "
+  "pli-tv-bu-pm:25.8": "And don’t consent to schism in the Sangha. ",
+  "pli-tv-bu-pm:25.9": "Stay with the Sangha, for a united Sangha—in concord, in harmony, having a joint recitation—is at ease.' "
 }
