Translations by delightedbydhamma to translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json

--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -59,5 +59,6 @@
   "pli-tv-bu-pm:25.12": "they commits an offense entailing suspension. ",
   "pli-tv-bu-pm:26.1": "If a monk is difficult to correct, and he makes himself incorrigible when legitimately corrected by the monks concerning the training rules that are recited, saying, ",
   "pli-tv-bu-pm:26.2": "“Venerables, don’t say anything to me, either good or bad, and I won’t say anything to you, either good or bad. ",
-  "pli-tv-bu-pm:26.3": "Please refrain from correcting me,” "
+  "pli-tv-bu-pm:26.3": "Please refrain from correcting me,” ",
+  "pli-tv-bu-pm:26.4": "then the monks should correct him like this: "
 }
