Translations by Piyadassii to translation/lt/piyadassi/sutta/sn/sn12/sn12.1_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/sn/sn12/sn12.1_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn12/sn12.1_translation-lt-piyadassi.json
@@ -29,7 +29,7 @@
   "sn12.1:3.1": "Dėl visiško neišmanymo išblėsimo ir baigties baigiasi valingi veiksmai. ",
   "sn12.1:3.2": "Dėl valingų veiksmų baigties baigiasi sąmonė. ",
   "sn12.1:3.3": "Dėl sąmonės baigties baigiasi protas ir materiali forma.",
-  "sn12.1:3.4": "Dėl vardo ir pavidalo baigties baigiasi šešios patyrimo sritys. ",
+  "sn12.1:3.4": "Dėl proto ir materialios formos baigties baigiasi šešios patyrimo sritys.",
   "sn12.1:3.5": "Dėl šešių patyrimo sričių baigties baigiasi sąlytis. ",
   "sn12.1:3.6": "Dėl sąlyčio baigties baigiasi jausmo tonas. ",
   "sn12.1:3.7": "Dėl jausmo tono baigties baigiasi troškimas. ",
