Translations by delightedbydhamma to translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json

--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -61,5 +61,6 @@
   "pli-tv-bu-pm:26.2": "“Venerables, don’t say anything to me, either good or bad, and I won’t say anything to you, either good or bad. ",
   "pli-tv-bu-pm:26.3": "Please refrain from correcting me,” ",
   "pli-tv-bu-pm:26.4": "then the monks should correct him like this: ",
-  "pli-tv-bu-pm:26.5": "'Be easy to correct, Venerable, not incorrigible. "
+  "pli-tv-bu-pm:26.5": "'Be easy to correct, Venerable, not incorrigible. ",
+  "pli-tv-bu-pm:26.6": "And please give legitimate correction to the monks, and the monks will do the same to you. "
 }
