Fix straight quotations

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -202,7 +202,7 @@
   "dn15:31.4": "’Prijatelju, ako bi osećaj potpuno nestao, bez ikakvog ostatka,",
   "dn15:31.5": "u potpuno odsustvu osećaja, sa nestankom osećaja, da li bi se ideja ’ja sam’ mogla pojaviti?’.”",
   "dn15:31.6": "„Sigurno da ne bi, poštovani gospodine.”",
-  "dn15:31.7": "\"Zbog toga, Ānanda, nije prihvatljivo smatrati da je sopstvo to koje doživljava osećaj.",
+  "dn15:31.7": "„Zbog toga, Ānanda, nije prihvatljivo smatrati da je sopstvo to koje doživljava osećaj.",
   "dn15:32.1": "Ānanda, kada monah ne smatra osećaj sopstvom, ne smatra da je sopstvo bez doživljaja osećaja, kada ne smatra: ’Moje sopstvo oseća, jer je moje sopstvo podložno osećaju’ – ",
   "dn15:32.2": "tada, bez takvih razmatranja, ne vezuje se za bilo šta na ovome svetu.",
   "dn15:32.3": "Pošto se ne vezuje, nije uznemiren. Kada nije uznemiren, on stiže do nibbāne.",
@@ -233,7 +233,7 @@
   "dn15:33.16": "To je sedma stanica za svest.",
   "dn15:33.17": "Osnova bića bez moći opažanja i, druga, osnova ni opažanja ni neopažanja – (to su dve osnove).",
   "dn15:34.1": "Sada, u pogledu tih sedam stanica za svest i dve osnove,",
-  "dn15:34.2": "ako neko razume prvu stanicu za svest, onu bića koja se razlikuju po telu i po opažanju, i ako razume njen nastanak, prestanak, njezino zadovoljenje, nedovoljnost i izlaz iz nje, da li mu priliči da traži užitak u njoj?\"",
+  "dn15:34.2": "ako neko razume prvu stanicu za svest, onu bića koja se razlikuju po telu i po opažanju, i ako razume njen nastanak, prestanak, njezino zadovoljenje, nedovoljnost i izlaz iz nje, da li mu priliči da traži užitak u njoj?”",
   "dn15:34.3": "„Sigurno da ne, poštovani gospodine”…",
   "dn15:34.4": "„Ako neko razume preostale stanice za svest…",
   "dn15:34.5": "područje bića bez moći opažanja… područje ni opažanja ni neopažanja i ako razume njen nastanak, prestanak, njezino zadovoljenje, nedovoljnost i izlaz iz nje, da li mu priliči da traži užitak u njoj?”",
