Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -4,5 +4,6 @@
   "mn93:1.1": "So habe ich es gehört: ",
   "mn93:1.2": "Einmal hielt sich der Buddha bei Sāvatthī in Jetas Wäldchen auf, dem Kloster des Anāthapiṇḍika. ",
   "mn93:2.1": "Damals befanden sich etwa fünfhundert Brahmanen aus einem anderen Land wegen einer geschäftlichen Angelegenheit in Sāvatthī. ",
-  "mn93:2.2": "Da dachten diese Brahmanen: "
+  "mn93:2.2": "Da dachten diese Brahmanen: ",
+  "mn93:2.3": "„Dieser Asket Gotama plädiert für die Läuterung aller vier Kasten. "
 }
