Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -16,5 +16,6 @@
   "mn93:4.4": "Daraufhin sagte Assalāyana zu ihnen: ",
   "mn93:4.5": "„Man sagt, der Asket Gotama sei einer, der nach Grundsätzen spricht. ",
   "mn93:4.6": "Aber mit denen, die nach Grundsätzen sprechen, ist es schwer, ein Streitgespräch zu führen. ",
-  "mn93:4.7": "Ich bin nicht in der Lage, mit dem Asketen Gotama über diese Sache ein Streitgespräch zu führen.“ "
+  "mn93:4.7": "Ich bin nicht in der Lage, mit dem Asketen Gotama über diese Sache ein Streitgespräch zu führen.“ ",
+  "mn93:4.8": "Zum zweiten Mal sagten diese Brahmanen zu ihm: "
 }
