Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -155,5 +155,6 @@
   "dn16:1.16.3": "’Nije bilo, neće biti, niti sada postoji asketa ili brahman koji nadilazi Blaženog u višem znanju o potpunom probuđenju’.” ",
   "dn16:1.16.5": "’Ovako verujem, Blaženi:",
   "dn16:1.16.6": "’Nije bilo, neće biti, niti sada postoji asketa ili brahman koji nadilazi Blaženog u višem znanju o potpunom probuđenju’.” ",
-  "dn16:1.16.7": "Sāriputta, plemenite, potpuno probuđene Bude koji su živeli u prošlosti, da li si znao sve te Blažene pronikavši svojim umom u njihov um ovako:"
+  "dn16:1.16.7": "Sāriputta, plemenite, potpuno probuđene Bude koji su živeli u prošlosti, da li si znao sve te Blažene pronikavši svojim umom u njihov um ovako:",
+  "dn16:1.16.8": "’Ovakva je vrlina tih Blaženih, ovakvo učenje, ovakva mudrost, ovakvo življenje, ovakvo oslobođenje’?”"
 }
