Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -157,7 +157,7 @@
   "dn16:1.16.6": "’Nije bilo, neće biti, niti sada postoji asketa ili brahman koji nadilazi Blaženog u višem znanju o potpunom probuđenju’.” ",
   "dn16:1.16.7": "Sāriputta, plemenite, potpuno probuđene Bude koji su živeli u prošlosti, da li si znao sve te Blažene pronikavši svojim umom u njihov um ovako:",
   "dn16:1.16.8": "’Ovakva je vrlina tih Blaženih, ovakvo učenje, ovakva mudrost, ovakvo življenje, ovakvo oslobođenje’?”",
-  "dn16:1.16.9": "„Ne, poštovani gospodine. ",
+  "dn16:1.16.9": "„Ne, poštovani gospodine.”",
   "dn16:1.16.10": "A one plemenite, potpuno probuđene Bude koji će tek živeti u budućnosti, da li znaš sve te Blažene pronikavši svojim umom u njihov um ovako:",
   "dn16:1.16.11": "’Ovakva je vrlina tih Blaženih, ovakvo učenje, ovakva mudrost, ovakvo življenje, ovakvo oslobođenje’?”",
   "dn16:1.16.12": "„Ne, poštovani gospodine. "
