Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -27,5 +27,6 @@
   "mn93:4.18": "Bitte, Herr Assalāyana, führe mit dem Asketen Gotama ein Streitgespräch darüber. ",
   "mn93:4.19": "Denn du hast als Wanderer gelebt. ",
   "mn93:4.20": "Gib dich nicht geschlagen, bevor du in den Kampf gezogen bist!“ ",
-  "mn93:4.21": "Daraufhin sagte Assalāyana zu ihnen: "
+  "mn93:4.21": "Daraufhin sagte Assalāyana zu ihnen: ",
+  "mn93:4.22": "„Offenbar, meine Herren, kommt es bei euch nicht an, wenn ich sage: "
 }
