Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -37,5 +37,6 @@
   "mn93:5.2": "Nach der Begrüßung und dem Austausch von Höflichkeiten setzte er sich zur Seite hin und sagte zum Buddha: ",
   "mn93:5.3": "„Meister Gotama, die Brahmanen sagen: ",
   "mn93:5.4": "‚Nur die Brahmanen sind die erste Kaste; andere Kasten sind geringer. ",
-  "mn93:5.5": "Nur die Brahmanen sind die helle Kaste; andere Kasten sind dunkel. "
+  "mn93:5.5": "Nur die Brahmanen sind die helle Kaste; andere Kasten sind dunkel. ",
+  "mn93:5.6": "Nur die Brahmanen sind geläutert; andere sind es nicht. "
 }
