Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -43,5 +43,6 @@
   "mn93:5.8": "Was sagt der Asket Gotama dazu?“ ",
   "mn93:5.9": "„Aber Assalāyana, man sieht, dass Brahmaninnen ihre Monatsblutung haben, dass sie schwanger werden, Kinder gebären und stillen. ",
   "mn93:5.10": "Doch obwohl sie aus dem Schoß einer Brahmanin geboren wurden, sagen die Brahmanen: ",
-  "mn93:5.11": "‚Nur die Brahmanen sind die erste Kaste; andere Kasten sind geringer. "
+  "mn93:5.11": "‚Nur die Brahmanen sind die erste Kaste; andere Kasten sind geringer. ",
+  "mn93:5.12": "Nur die Brahmanen sind die helle Kaste; andere Kasten sind dunkel. "
 }
