Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -45,5 +45,6 @@
   "mn93:5.10": "Doch obwohl sie aus dem Schoß einer Brahmanin geboren wurden, sagen die Brahmanen: ",
   "mn93:5.11": "‚Nur die Brahmanen sind die erste Kaste; andere Kasten sind geringer. ",
   "mn93:5.12": "Nur die Brahmanen sind die helle Kaste; andere Kasten sind dunkel. ",
-  "mn93:5.13": "Nur die Brahmanen sind geläutert; andere sind es nicht. "
+  "mn93:5.13": "Nur die Brahmanen sind geläutert; andere sind es nicht. ",
+  "mn93:5.14": "Nur die Brahmanen sind die rechtmäßigen Söhne Brahmās, aus seinem Mund geboren, von Brahmā geboren, von Brahmā geschaffen, Erben Brahmās.‘“ "
 }
