Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -175,5 +175,6 @@
   "dn16:1.17.6": "Takav bi čovek mogao zaključiti:",
   "dn16:1.17.7": "’Svako živo biće koje bi ušlo ili izašlo iz ovoga grada, moralo bi da to učini kroz ovu kapiju’.",
   "dn16:1.17.8": "Na isti način sam, poštovani gospodine, do takvog zaključka došao razmišljanjem zasnovanim na Dhammi:",
-  "dn16:1.17.9": "’Oni u prošlosti, plemeniti i potpuno probuđeni, svi ti Blaženi su savladali pet prepreka, razumeli svojom mudrošću nečistoće uma koje ga slabe, učvrstili svoj um u četiri temelja svesnosti, razvili sedam elemenata probuđenja, te tako stekli više znanje o nenadmašnom potpunom probuđenju."
+  "dn16:1.17.9": "’Oni u prošlosti, plemeniti i potpuno probuđeni, svi ti Blaženi su savladali pet prepreka, razumeli svojom mudrošću nečistoće uma koje ga slabe, učvrstili svoj um u četiri temelja svesnosti, razvili sedam elemenata probuđenja, te tako stekli više znanje o nenadmašnom potpunom probuđenju.",
+  "dn16:1.17.10": "Isto tako, oni u budućnosti, plemeniti i potpuno probuđeni, svi ti Blaženi će savladati pet prepreka, razumeti svojom mudrošću nečistoće uma koje ga slabe, učvrstiti svoj um u četiri temelja svesnosti, razviti sedam elemenata probuđenja, te tako steći više znanje o nenadmašnom potpunom probuđenju."
 }
