Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -177,5 +177,6 @@
   "dn16:1.17.8": "Na isti način sam, poštovani gospodine, do takvog zaključka došao razmišljanjem zasnovanim na Dhammi:",
   "dn16:1.17.9": "’Oni u prošlosti, plemeniti i potpuno probuđeni, svi ti Blaženi su savladali pet prepreka, razumeli svojom mudrošću nečistoće uma koje ga slabe, učvrstili svoj um u četiri temelja svesnosti, razvili sedam elemenata probuđenja, te tako stekli više znanje o nenadmašnom potpunom probuđenju.",
   "dn16:1.17.10": "Isto tako, oni u budućnosti, plemeniti i potpuno probuđeni, svi ti Blaženi će savladati pet prepreka, razumeti svojom mudrošću nečistoće uma koje ga slabe, učvrstiti svoj um u četiri temelja svesnosti, razviti sedam elemenata probuđenja, te tako steći više znanje o nenadmašnom potpunom probuđenju.",
-  "dn16:1.17.11": "Isto tako, Blaženi, koji je sada plemeniti i potpuno probuđeni, jeste savladao pet prepreka, razumeo svojom mudrošću nečistoće uma koje ga slabe, učvrstio svoj um u četiri temelja svesnosti, razvio sedam elemenata probuđenja, te tako stekao više znanje o nenadmašnom potpunom probuđenju.”"
+  "dn16:1.17.11": "Isto tako, Blaženi, koji je sada plemeniti i potpuno probuđeni, jeste savladao pet prepreka, razumeo svojom mudrošću nečistoće uma koje ga slabe, učvrstio svoj um u četiri temelja svesnosti, razvio sedam elemenata probuđenja, te tako stekao više znanje o nenadmašnom potpunom probuđenju.”",
+  "dn16:1.18.1": "A dok je boravio kraj Nāḷande, u Pāvārikinom mangovom gaju, Blaženi je često govorio monasima o Dhammi:"
 }
