Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -179,5 +179,6 @@
   "dn16:1.17.10": "Isto tako, oni u budućnosti, plemeniti i potpuno probuđeni, svi ti Blaženi će savladati pet prepreka, razumeti svojom mudrošću nečistoće uma koje ga slabe, učvrstiti svoj um u četiri temelja svesnosti, razviti sedam elemenata probuđenja, te tako steći više znanje o nenadmašnom potpunom probuđenju.",
   "dn16:1.17.11": "Isto tako, Blaženi, koji je sada plemeniti i potpuno probuđeni, jeste savladao pet prepreka, razumeo svojom mudrošću nečistoće uma koje ga slabe, učvrstio svoj um u četiri temelja svesnosti, razvio sedam elemenata probuđenja, te tako stekao više znanje o nenadmašnom potpunom probuđenju.”",
   "dn16:1.18.1": "A dok je boravio kraj Nāḷande, u Pāvārikinom mangovom gaju, Blaženi je monasima često govorio o Dhammi:",
-  "dn16:1.18.2": "„Postoji vrlina, postoji koncentracija, postoji mudrost."
+  "dn16:1.18.2": "„Postoji vrlina, postoji koncentracija, postoji mudrost.",
+  "dn16:1.18.3": "Kada se vežba zajedno sa vrlinom, koncentracija donosi veliki plod, velike zasluge."
 }
