Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -184,5 +184,6 @@
   "dn16:1.18.4": "Kada se vežba zajedno sa koncentracijom, mudrost donosi veliki plod, velike zasluge.",
   "dn16:1.18.5": "Kada se vežba sa mudrošću, um postaje potpuno oslobođen otrova, a to su",
   "dn16:1.18.6": "otrov žudnje za čulnim zadovoljstvima, otrov žudnje za večnim postojanjem i otrov neznanja.”",
-  "dn16:1.19.0": "5. Opasnost slabe vrline"
+  "dn16:1.19.0": "5. Opasnost slabe vrline",
+  "dn16:1.19.1": "Kada je ostao kraj Nāḷande koliko je želeo, Blaženi reče poštovanom Ānandi:"
 }
