Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -48,5 +48,6 @@
   "mn93:5.13": "Nur die Brahmanen sind geläutert; andere sind es nicht. ",
   "mn93:5.14": "Nur die Brahmanen sind die rechtmäßigen Söhne Brahmās, aus seinem Mund geboren, von Brahmā geboren, von Brahmā geschaffen, Erben Brahmās.‘“ ",
   "mn93:6.1": "„Auch wenn der Asket Gotama das sagt, so bleiben die Brahmanen doch bei ihrem Glauben.“ ",
-  "mn93:6.4": "„Was denkst du, Assalāyana? "
+  "mn93:6.4": "„Was denkst du, Assalāyana? ",
+  "mn93:6.5": "Hast du gehört, dass es in Griechenland, Persien und anderen fremden Ländern nur zwei Klassen gibt, Herren und Leibeigene? Und dass Herren Leibeigene werden können und Leibeigene Herren?“ "
 }
